--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,6 +10,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600&display=swap"
         rel="stylesheet">
+    <link rel="icon" href="./add-to-cart.png" type="image/gif">
     <style>
         * {
             margin: 0;
